@@ -1229,18 +1229,31 @@ int
 SSL_get_fd(s)
      SSL *   s
 
-void
+AV *
 SSL_read(s,max=32768)
 	SSL *   s
 	int     max
-	PREINIT:
+    PREINIT:
 	char *buf;
 	int got;
-	CODE:
+    PPCODE:
 	New(0, buf, max, char);
-	ST(0) = sv_newmortal();   /* Undefined to start with */
-	if ((got = SSL_read(s, buf, max)) >= 0)
-		sv_setpvn( ST(0), buf, got);
+	got = SSL_read(s, buf, max);
+
+	// If in list context, return 2-item list:
+	//   first return value:  data gotten, or undef on error (got<0)
+	//   second return value: result from SSL_read()
+	if (GIMME_V==G_ARRAY) {
+	    EXTEND(SP, 2);
+	    PUSHs(sv_2mortal(got>=0 ? newSVpvn(buf, got) : newSV(0)));
+	    PUSHs(sv_2mortal(newSViv(got)));
+
+	// If in scalar or void context, return data gotten, or undef on error.
+	} else {
+	    EXTEND(SP, 1);
+	    PUSHs(sv_2mortal(got>=0 ? newSVpvn(buf, got) : newSV(0)));
+	}
+
 	Safefree(buf);
 
 void
